--- a/2.Method.md
+++ b/2.Method.md
@@ -2,30 +2,35 @@
 
 EASEL is a pipeline that relies on several methods and subworkflows. Here, each step of the method is described in terms of its input and output, and what is being accomplished at each step in the workflow.
 
-## Table of Content
-
 1. [Data gathering](#data-gathering)
-2. [Gene models for AUGUSTUS training](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/2_generating_gene_models.md)
-3. [Generating hints for AUGUSTUS prediction](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/3_hints_for_augustus.md)
-4. [AUGUSTUS prediction with hints](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/4_Augustus_with_hints.md)
-5. [BRAKER runs](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/5_BRAKER_runs.md)
+2. [Training and initial gene model prediction](#training-and-initial-gene-model-prediction)
+- [Gene models for AUGUSTUS training](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/2_generating_gene_models.md)
+- [Generating hints for AUGUSTUS prediction](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/3_hints_for_augustus.md)
+- [AUGUSTUS prediction with hints](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/4_Augustus_with_hints.md)
+3. [Augustus ab initio predictions](#augustus-ab-initio-predictions)
+4. [Merging predictions](#merging-predicitons)
 6. [Evaluation](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/6_evaluation.md)
 7. [Results](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/blob/main/Files/7_Results.md)
 
-![](https://gitlab.com/PlantGenomicsLab/easel-augustus-training/-/raw/main/Results/EASEL_Framework.png)
-![](/core/labs/Wegrzyn/easel-workshop/easel-workshop/files/figs/easel_pipeline_Nov22.png)
+![](files/figs/easel_pipeline_Nov22.png)
+
 
 ## Data Gathering
 
+Gene model predictions are primarity generated through aligning transcriptomic data to reference genome sequences and *ab initio* prediction of gene models ([1](#1.)). EASEL takes as input: 
+- soft-masked reference genome (.fa)
+- Paired-end RNA-Seq reads
+
+## Training and initial gene model prediction
+
+## Augustus ab initio predictions
+
+## Merging predictions
 
 
 ## References / Repositories
 
 Links to citations and repositories for software used in EASEL pipeline.
 
-- [The Practice of Reproducible Research](https://www.practicereproducibleresearch.org)
-- [BITSS 2017 Research Transparency and Reproducibility Training (RT2) - London](https://osf.io/cdfh7/)
-- [Marjan Bakker, _Tilburg University_, "Scientific Misconduct and Researcher Degrees of Freedom"](https://mfr.osf.io/render?url=https://osf.io/nrsvu/?action=download%26mode=render)
-- [Munafò et al. (2017). A manifesto for reproducible science. Nature Human Behaviour](https://www.nature.com/articles/s41562-016-0021)
-- [Reproducibility and reliability of biomedical research](https://acmedsci.ac.uk/policy/policy-projects/reproducibility-and-reliability-of-biomedical-research)
-- [A guide to reproducible code in Ecology and Evolution](http://www.britishecologicalsociety.org/publications/guides-to/)
+### 1. [Yandell, Mark, and Daniel Ence. "A beginner's guide to eukaryotic genome annotation." Nature Reviews Genetics 13.5 (2012): 329-342.](https://www.nature.com/articles/nrg3174)
+- 
