Updating Methods Text

--- a/2.Method.md
+++ b/2.Method.md
@@ -17,9 +17,11 @@ EASEL is a pipeline that relies on several methods and subworkflows. Here, each 
 
 ## Data Gathering
 
-Gene model predictions are primarity generated through aligning transcriptomic data to reference genome sequences and *ab initio* prediction of gene models ([1](#1.)). EASEL takes as input: 
+Gene model predictions are primarity generated through aligning transcriptomic data to soft-masked reference genome sequences and *ab initio* prediction ([1](#1.)). EASEL takes as input: 
 - soft-masked reference genome (.fa)
-- Paired-end RNA-Seq reads
+- Paired-end RNA-Seq reads (SRA accession numbers or as .fastq)
+
+For the workshop we'll be using the [Boxelder chromosome 1]() as the reference genome
 
 ## Training and initial gene model prediction
 
@@ -32,5 +34,7 @@ Gene model predictions are primarity generated through aligning transcriptomic d
 
 Links to citations and repositories for software used in EASEL pipeline.
 
-### 1. [Yandell, Mark, and Daniel Ence. "A beginner's guide to eukaryotic genome annotation." Nature Reviews Genetics 13.5 (2012): 329-342.](https://www.nature.com/articles/nrg3174)
-- 
+1. [Yandell, Mark, and Daniel Ence. "A beginner's guide to eukaryotic genome annotation." Nature Reviews Genetics 13.5 (2012): 329-342.](https://www.nature.com/articles/nrg3174)
+2. []()
+2. []()
+2. []()
