--- a/2.Method.md
+++ b/2.Method.md
@@ -21,7 +21,7 @@ Gene model predictions are primarity generated through aligning transcriptomic d
 - soft-masked reference genome (.fa)
 - Paired-end RNA-Seq reads (SRA accession numbers or as .fastq)
 
-For the workshop we'll be using the [Boxelder chromosome 1]() as the reference genome
+For the workshop we'll be using the Boxelder chromosome 1 ([data/genome/acer_negundo_chr1.fa](data/genome/acer_negundo_chr1.fa)) as the reference genome. 
 
 ## Training and initial gene model prediction
 
