--- a/0.Setup.md
+++ b/0.Setup.md
@@ -10,19 +10,11 @@ How will people log in? This is something you can sort out with Noah
 ssh username@xanadu-submit-ext.cam.uchc.edu
 ```
 
-## Nextflow
-
-Here you can tell users how to set paths in the nextflow config file 
-
-## Software
-
-Brief overview of the software that we will use. (very brief, more of a list with citations.)
-
 ## Genomic resources
 
 We will be using chromosome 1 from the Boxelder (Acer negundo) for this workshop ([McEvoy et al. 2022](https://onlinelibrary.wiley.com/doi/10.1111/tpj.15657)). The assembly was softmasked using RepeatModeler v2.01 ([Flynn et al. 2020](https://doi.org/10.1073/pnas.1921046117)) and RepeatMasker v4.0.6 ([Smith et al. 2013](http://www.repeatmasker.org)).
 
-The sequences are avaialble in the workshop github (data/genome/GCA_025594385.1_ASM2559438v1_genomic.fna) or can be downloaded from GenBank:
+The sequences are avaialble in the workshop github (data/genome/chr1.fna) or can be downloaded from GenBank:
 
 ```
 wget https://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/025/594/385/GCA_025594385.1_ASM2559438v1/GCA_025594385.1_ASM2559438v1_genomic.fna.gz
@@ -95,21 +87,16 @@ seqkit grep -i -r -p 'CM046694.1+$' GCA_025594385.1_ASM2559438v1_genomic.fna  -o
 
 ### Trascriptomic data
 
-RNA sequences will be used for the annotation and they are available on the github (path/2/seqs) or can be downloaded from the SRA using their accession numbers.
+RNA sequences will be used to idenity gene models. To obtain the sequneces, EASEL will download them with the sratoolkit from a list of run id's (e.g. SRR-id's). The SRA list for Boxelder is located at `data/sra/acer_negundo.txt`. 
 
-```
-module load sratoolkit/
-list = data/sra/rna-accessions.txt
+## Software
 
-fasterq-dump --split-files $id
-gzip *.fastq 
-
-
-```
-*Ok, I'm not sure what to write here. I need to talk  to Cynthia.*
+Brief overview of the software that we will use. (very brief, more of a list with citations.)
 
 
 ## References
 
+1. [McEvoy, Susan L., et al. "Strategies of tolerance reflected in two North American maple genomes." The Plant Journal 109.6 (2022): 1591-1613.](https://onlinelibrary.wiley.com/doi/abs/10.1111/tpj.15657)
+2. [Flynn, Jullien M., et al. "RepeatModeler2 for automated genomic discovery of transposable element families." Proceedings of the National Academy of Sciences 117.17 (2020): 9451-9457.](https://doi.org/10.1073/pnas.1921046117)
+3. [Smit, A., Hubley, R. & Green, P. (2013) RepeatMasker Open-4.0.](http://www.repeatmasker.org)
 
-1. [Yandell, Mark, and Daniel Ence. "A beginner's guide to eukaryotic genome annotation." Nature Reviews Genetics 13.5 (2012): 329-342.](https://www.nature.com/articles/nrg3174)
