--- a/0.Setup.md
+++ b/0.Setup.md
@@ -91,6 +91,18 @@ RNA sequences will be used to idenity gene models. To obtain the sequneces, EASE
 
 ## Software
 
+The EASEL pipeline is built on software to move transcriptomic and genomic information into an *ab initio* gene model predictor, where predictions are then filtered and further annotated with functional information. Below is a table of software used in the method.
+
+| Software | Version | Function | 
+| :---     | :---    | :---     |
+|[sratoolkit](https://hpc.nih.gov/apps/sratoolkit.html)| 2.11.3 | import transcriptome reads |
+|[samtools](http://www.htslib.org)| 1.9 | outputs bam file and mapping rate |
+|[hisat2](http://daehwankimlab.github.io/hisat2/) | | aligns transcripts to reference genome |
+|[gmap]() | 2019-06-10 | |
+|[]() | | |
+|[]() | | |
+|[]() | | |
+
 Brief overview of the software that we will use. (very brief, more of a list with citations.)
 
 
