--- a/0.Setup.md
+++ b/0.Setup.md
@@ -95,15 +95,18 @@ The EASEL pipeline is built on software to move transcriptomic and genomic infor
 
 | Software | Version | Function | 
 | :---     | :---    | :---     |
+|[gffread](https://github.com/gpertea/gffread) | 0.12.7 | general purpose tool for gtf/gff files|
 |[sratoolkit](https://hpc.nih.gov/apps/sratoolkit.html)| 2.11.3 | import transcriptome reads |
+|[fastp](https://github.com/OpenGene/fastp) | | QC RNAseq reads |
 |[samtools](http://www.htslib.org)| 1.9 | outputs bam file and mapping rate |
 |[hisat2](http://daehwankimlab.github.io/hisat2/) | | aligns transcripts to reference genome |
-|[gmap]() | 2019-06-10 | |
+|[gmap](http://research-pub.gene.com/gmap/) | 2019-06-10 | builds genome index |
+|[PsiCLASS](https://github.com/splicebox/PsiCLASS) | | assembles transcriptome |
+|[stringtie2](https://github.com/skovaka/stringtie2) | | assembles transcriptome from splice-aware alignments |
+|[TransDecoder](https://github.com/TransDecoder/TransDecoder) | | Identify coding regions in transcripts |
 |[]() | | |
 |[]() | | |
 |[]() | | |
-
-Brief overview of the software that we will use. (very brief, more of a list with citations.)
 
 
 ## References
