--- a/0.Setup.md
+++ b/0.Setup.md
@@ -95,19 +95,19 @@ The EASEL pipeline is built on software to move transcriptomic and genomic infor
 
 | Software | Version | Function | 
 | :---     | :---    | :---     |
-|[gffread](https://github.com/gpertea/gffread) | 0.12.7 | general purpose tool for gtf/gff files|
-|[sratoolkit](https://hpc.nih.gov/apps/sratoolkit.html)| 2.11.3 | import transcriptome reads |
+|[gffread](https://github.com/gpertea/gffread) | 0.12.7 | General purpose tool for gtf/gff files|
+|[sratoolkit](https://hpc.nih.gov/apps/sratoolkit.html)| 2.11.3 | Import transcriptome reads |
 |[fastp](https://github.com/OpenGene/fastp) | | QC RNAseq reads |
-|[samtools](http://www.htslib.org)| 1.9 | outputs bam file and mapping rate |
-|[hisat2](http://daehwankimlab.github.io/hisat2/) | | aligns transcripts to reference genome |
-|[gmap](http://research-pub.gene.com/gmap/) | 2019-06-10 | builds genome index |
-|[PsiCLASS](https://github.com/splicebox/PsiCLASS) | | assembles transcriptome |
-|[stringtie2](https://github.com/skovaka/stringtie2) | | assembles transcriptome from splice-aware alignments |
-|[TransDecoder](https://github.com/TransDecoder/TransDecoder) | | Identify coding regions in transcripts |
-|[]() | | |
-|[]() | | |
-|[]() | | |
-
+|[samtools](http://www.htslib.org)| 1.9 | Outputs bam file and mapping rate |
+|[hisat2](http://daehwankimlab.github.io/hisat2/) | | Aligns transcripts to reference genome |
+|[gmap](http://research-pub.gene.com/gmap/) | 2019-06-10 | Builds genome index |
+|[PsiCLASS](https://github.com/splicebox/PsiCLASS) | | Assembles transcriptome |
+|[stringtie2](https://github.com/skovaka/stringtie2) | | Assembles transcriptome from splice-aware alignments |
+|[TransDecoder](https://github.com/TransDecoder/TransDecoder) | | Identify coding regions in transcripts and provides protein and nucleotide hints|
+|[GenomeThreader](https://genomethreader.org) | 1.7.3 | Align protein sequences to genome to generate hints |
+|[USEARCH](https://www.drive5.com/usearch/) | | Identify non-redundant gene models |
+|[AUGUSTUS](https://bioinf.uni-greifswald.de/augustus/) | | *Ab initio* gene model prediction |
+| [AGAT](https://github.com/NBISweden/AGAT) | | Combine gene model predicitons |
 
 ## References
 
