--- a/0.Setup.md
+++ b/0.Setup.md
@@ -82,7 +82,7 @@ and it does. An alternative method to extract chromosome 1 is with [seqkit's gre
 
 ```
 module load seqkit/2.2.0
-seqkit grep -i -r -p 'CM046694.1+$' GCA_025594385.1_ASM2559438v1_genomic.fna  -o out.fna
+seqkit grep -w 80 -i -r -p 'CM046694.1+$' GCA_025594385.1_ASM2559438v1_genomic.fna -o out.fna
 ```
 
 ### Trascriptomic data
