--- a/1.Introduction.md
+++ b/1.Introduction.md
@@ -2,3 +2,26 @@
 
 *This section is intended to be a brief, but well written and cited section. About four paragraphs with a figure or two that describe genome annotation to the neophyte.*
 
+Annotation of protein-coding genes in an assembled genome is an essential process for genome sequencing projects. Structurally annotatted gene models provide precise information regarding the location of a gene on a chromosome, translation initiation sites, untranslated (UTR) regions, and critically, introns and exons containing coding sequences, among other features ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Genome annotaitons enable numerous inquiries into genetic and genomic questions, and thus are a critical building block in biological sciences. 
+
+Gene model annotaiton in non-model organisms is a challenging task ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). In contrast to model organisms, non-models typically lack robust knowledge of gene models gained from decades of sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), or genetic modification of single exons or sites. The information gained from classical genetic studies allows for robust identification of gene model structure (e.g. exon/intron boundaries). In non-model systems, methods for gene model prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)).
+
+Most popular among the gene model prediction methods in non-model organsims is *ab initio* prediction, where gene models are predicted using genomic sequences and a model fit containing information on gene structure in the target genome or a close relative (cite). 
+
+
+where gene models are predicted from genomic sequences while using a statistical model 
+
+In non-model systems, transcriptomes generated from RNA-sequencing are the principle tool for identifying gene models (cite).
+
+Merging information from multiple analytical pathways is important and challenging ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Sotware exist to use transcriptomes alone to generate gene-models (cite)
+
+
+There are many software and pipelines for genome annotation projects. Merging information together to evaluate multiple options is not only computationally challenging, but also theoretically difficult in situations where the truth is not known or not knowable without signficant investment in human resources. 
+
+
+
+
+### References
+
+1. [Yandell, Mark, and Daniel Ence. "A beginner's guide to eukaryotic genome annotation." Nature Reviews Genetics 13.5 (2012): 329-342.](https://www.nature.com/articles/nrg3174).
+2. [Gremme, Gordon. Computational gene structure prediction. Diss. Staats-und Universitätsbibliothek Hamburg Carl von Ossietzky, 2012.](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)
