--- a/1.Introduction.md
+++ b/1.Introduction.md
@@ -2,9 +2,9 @@
 
 *This section is intended to be a brief, but well written and cited section. About four paragraphs with a figure or two that describe genome annotation to the neophyte.*
 
-Annotation of protein-coding genes in an assembled genome is an essential process for genome sequencing projects. Structurally annotatted gene models provide precise information regarding the location of a gene on a chromosome, translation initiation sites, untranslated (UTR) regions, and critically, introns and exons containing coding sequences, among other features ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Genome annotaitons enable numerous inquiries into genetic and genomic questions, and thus are a critical building block in biological sciences. 
+Annotation of protein-coding genes in an assembled genome is an essential process for genome sequencing projects. Structurally annotatted eukaryotic gene models provide precise information regarding the location of a gene on a chromosome, translation initiation sites, untranslated (UTR) regions, and critically, introns and exons containing coding sequences, among other features ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). An annotated genome enables numerous inquiries into genetic and genomic questions, and thus are a critical building block in the biological sciences. 
 
-Gene model annotaiton in non-model organisms is a challenging task ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). In contrast to model organisms, non-models typically lack robust knowledge of gene models gained from decades of sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), or genetic modification of single exons or sites. The information gained from classical genetic studies allows for robust identification of gene model structure (e.g. exon/intron boundaries). In non-model systems, methods for gene model prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)).
+Annotating gene models in non-model organisms is a challenging task ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). In contrast to model organisms, non-models typically lack robust knowledge of gene models gained from decades of sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), or genetic modification of single exons or sites. The information gained from classical genetic studies allows for robust identification of gene model structure (e.g. exon/intron boundaries). In non-model systems, methods for gene model prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)).
 
 Most popular among the gene model prediction methods in non-model organsims is *ab initio* prediction, where gene models are predicted using genomic sequences and a model fit containing information on gene structure in the target genome or a close relative (cite). 
 
