--- a/1.Introduction.md
+++ b/1.Introduction.md
@@ -6,17 +6,10 @@ Annotation of protein-coding genes in an assembled genome is an essential proces
 
 Annotating gene models in non-model organisms is a challenging task ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). In contrast to model organisms, non-models typically lack robust knowledge of gene models gained from decades of sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), or genetic modification of single exons or sites. The information gained from classical genetic studies allows for robust identification of gene model structures (e.g. exon/intron boundaries). In non-model systems, methods for gene model prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)).
 
-*Ab initio* gene model predictions is among the most popular method for genome annotation in non-model organisms. In *ab initio* annotation, gene models are predicted using genomic sequences and a model fit containing information on gene structures in the target genome or a close relative ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Gene models are fit using external evidence that describes a gene model. The evidence can come in the from of transcriptomes from RNAseq experiments or protein-based evidence containing amino acid sequences (cite). Software to fit gene models includes 
+*Ab initio* gene model predictions is among the most popular method for genome annotation in non-model organisms. In *ab initio* annotation, gene models are predicted using genomic sequences and a model fit containing information on gene structures in the target genome or a close relative ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Gene models are fit using a genome assembly and external evidence describing gene models. The evidence can come in the from of transcriptomes from RNAseq experiments or protein-based evidence containing amino acid sequences. Gene models are created through machine-learning algorithms, such as hidden Markov models (HMMs), by identifying sequence similarity between the genome assembly and external inforamtion ([Scalzitti et al. 2020](https://doi.org/10.1186/s12864-020-6707-9)). This approach is implemented in software like AUGUSTUS ([Stanke et al. 2006](https://doi.org/10.1186/1471-2105-7-62)) or FGENESH
 
 
-where gene models are predicted from genomic sequences while using a statistical model 
-
-In non-model systems, transcriptomes generated from RNA-sequencing are the principle tool for identifying gene models (cite).
-
-Merging information from multiple analytical pathways is important and challenging ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Sotware exist to use transcriptomes alone to generate gene-models (cite)
-
-
-There are many software and pipelines for genome annotation projects. Merging information together to evaluate multiple options is not only computationally challenging, but also theoretically difficult in situations where the truth is not known or not knowable without signficant investment in human resources. 
+Merging information from multiple analytical pathways can improve annotation quality, but is conceputally challenging in situations where the truth is not known or not knowable without signficant investment in human resources. ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). 
 
 
 
