--- a/1.Introduction.md
+++ b/1.Introduction.md
@@ -8,11 +8,9 @@ Annotating gene models in non-model organisms is a challenging task, particularl
 
 Genome annotaiton is a process that involves multiple software and decisions by the user that influence the quality of the output. The difficulty of annotation most often lies in the fact that the end result is unknown and potentially unkowable. Heuristic methods relying on positive or negative comparison to a reference can't be performed unless a reference annotation is already available. Although, there are many ad hoc evalution statistics that can assess annotaiton quality, including BUSCO [Simao et al. 2015](https://academic.oup.com/bioinformatics/article/31/19/3210/211866), the ratio of mono- to multi-exonic genes, or EnTAP gene prediction qulaity ([Vuruputoor et al. 2022](https://doi.org/10.1101/2022.10.03.510643)). These evulation methods can guide the selection of tools and outcomes in an annotation pipeline. 
 
-Genome annotations fall into three broad categories: repeat annotation, structural annotaiton, and functional annotation. Before genome annotaiton can begin, an asssembled genome is required (tutorials for genome assembly can be found [here]()).
+Genome annotations fall into three broad categories: repeat annotation, structural annotaiton, and functional annotation. Before genome annotaiton can begin, an asssembled genome is required (tutorials for genome assembly can be found [here](https://bioinformatics.uconn.edu/resources-and-events/tutorials-2/)). Repeat annotaiton identifies repetitive elements in the genome which are then masked during down stream analyses. For projects interested in protein-coding genes, repetitive elements introduce uncertainity and masking them imrpoves annotation quality. RepeatModeler2 ([Flynn et al. 2020](https://www.pnas.org/doi/10.1073/pnas.1921046117)) or RepeatMasker ([Smit et al. 2013](https://www.repeatmasker.org/)) are common tools for repeat masking. 
 
-In non-model systems, methods for gene  prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)).
-
-*Ab initio* gene model predictions is among the most popular method for genome annotation in non-model organisms. In *ab initio* annotation, gene models are predicted using genomic sequences and a model fit containing information on gene structures in the target genome or a close relative ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Gene models are fit using a genome assembly and external evidence describing gene models. The evidence can come in the from of transcriptomes from RNAseq experiments or protein-based evidence containing amino acid sequences. Gene models are created through machine-learning algorithms, such as hidden Markov models (HMMs), by identifying sequence similarity between the genome assembly and external inforamtion ([Scalzitti et al. 2020](https://doi.org/10.1186/s12864-020-6707-9)). This approach is implemented in software like AUGUSTUS ([Stanke et al. 2006](https://doi.org/10.1186/1471-2105-7-62)) or FGENESH
+In non-model systems, methods for gene  prediction include *ab initio*, comparative, homology-based, or a combination of these methods ([Gremme, 2012](https://ediss.sub.uni-hamburg.de/handle/ediss/4964)). *Ab initio* gene model prediction is among the most popular method for genome annotation in non-model organisms. In *ab initio* annotation, gene models are predicted using genomic sequences and a model fit containing information on gene structures in the target genome or a close relative ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Gene models are fit using a genome assembly and external evidence describing gene models. The evidence can come in the from of transcriptomes from RNAseq experiments or protein-based evidence containing amino acid sequences. Gene models are created through machine-learning algorithms, such as hidden Markov models (HMMs), by identifying sequence similarity between the genome assembly and external inforamtion ([Scalzitti et al. 2020](https://doi.org/10.1186/s12864-020-6707-9)). This approach is implemented in software like AUGUSTUS ([Stanke et al. 2006](https://doi.org/10.1186/1471-2105-7-62)) or FGENESH ([]())
 
 
 Merging information from multiple analytical pathways can improve annotation quality, but is conceputally challenging in situations where the truth is not known or not knowable without signficant investment in human resources. ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). 
